testsuite/parser_tests/fail/arrays_err.0.psl
vec : vector<int, 3> = {1,2,3};
vec[index] = 0; //vector indexes must be CT-known
arr = repeat(1);
